--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,6 +28,9 @@
             <li>
               <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => 'PASSWORD CONFIRMATION' %>
             </li>
+            <span class="picture">
+              <%= f.file_field :picture %>
+            </span>
           </ul>
           <div class="actions">
             <%= f.submit "Sign up" %>
