--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,10 @@
               <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => 'PASSWORD CONFIRMATION' %>
             </li>
             <span class="picture">
-              <%= f.file_field :picture %>
+            <%= f.label :picture do %>
+                <%= f.file_field :picture %>
+                <%= f.hidden_field :picture_cache %>
+            <% end %>
             </span>
           </ul>
           <div class="actions">
