--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<title>Happ</title>
-	<link data-turbolinks-track="true" href="/assets/posts.css?body=1" media="all" rel="stylesheet" />
-	<link data-turbolinks-track="true" href="/assets/relationships.css?body=1" media="all" rel="stylesheet" />
-	<link data-turbolinks-track="true" href="/assets/reset-min.css?body=1" media="all" rel="stylesheet" />
-	<link data-turbolinks-track="true" href="/assets/application.css?body=1" media="all" rel="stylesheet" />
-	<script data-turbolinks-track="true" src="/assets/jquery.js?body=1"></script>
-	<script data-turbolinks-track="true" src="/assets/jquery_ujs.js?body=1"></script>
-	<script data-turbolinks-track="true" src="/assets/turbolinks.js?body=1"></script>
-	<script data-turbolinks-track="true" src="/assets/posts.js?body=1"></script>
-	<script data-turbolinks-track="true" src="/assets/relationships.js?body=1"></script>
-	<script data-turbolinks-track="true" src="/assets/application.js?body=1"></script>
+	<link data-turbolinks-track="true" href=<%= asset_path 'posts.css?body=1'%> media="all" rel="stylesheet" />
+	<link data-turbolinks-track="true" href=<%= asset_path 'relationships.css?body=1'%> media="all" rel="stylesheet" />
+	<link data-turbolinks-track="true" href=<%= asset_path 'reset-min.css?body=1'%> media="all" rel="stylesheet" />
+	<link data-turbolinks-track="true" href=<%= asset_path 'application.css?body=1'%> media="all" rel="stylesheet" />
+	<script data-turbolinks-track="true" src= <%= asset_path 'jquery.js?body=1'%></script>
+	<script data-turbolinks-track="true" src=<%= asset_path  'jquery_ujs.js?body=1'%></script>
+	<script data-turbolinks-track="true" src=<%= asset_path  'turbolinks.js?body=1'%></script>
+	<script data-turbolinks-track="true" src=<%= asset_path  'posts.js?body=1'%></script>
+	<script data-turbolinks-track="true" src=<%= asset_path  'relationships.js?body=1'%></script>
+	<script data-turbolinks-track="true" src=<%= asset_path  'application.js?body=1'%></script>
 	<meta content="authenticity_token" name="csrf-param" />
 	<meta content="Q4U78Ppo3Auho7eqovTlH67g3Lys2QsjePlMMV0Hs0A=" name="csrf-token" />
 
