--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,29 +1,13 @@
 <%- if controller_name != 'sessions' %>
-<<<<<<< HEAD
-<<<<<<< HEAD
-	<li>
-  	<%= link_to "Log in", new_session_path(resource_name), :class => 'log' %><br />
-  	</li>
-=======
-  <%= link_to "Log in", new_session_path(resource_name), :class => 'log' %><br />
->>>>>>> Page create account
-=======
-	<li>
-  	<%= link_to "Log in", new_session_path(resource_name), :class => 'log' %><br />
-  	</li>
->>>>>>> Page new_password
+	<li><%= link_to "Log in", new_session_path(resource_name), :class => 'log' %><br /></li>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-	<li>
-  <%= link_to "Sign up", new_registration_path(resource_name), :class => 'log' %><br />
-  	</li>
+	<li><%= link_to "Sign up", new_registration_path(resource_name), :class => 'log' %><br /></li>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-	<li>
-  		<%= link_to "Forgot your password?", new_password_path(resource_name), :class => 'log' %><br />
-  	</li>
+	<li><%= link_to "Forgot your password?", new_password_path(resource_name), :class => 'log' %><br /></li>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
