--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,6 +30,7 @@
             </li>
             <span class="picture">
                 <%= f.file_field :picture %>
+                <%= f.hidden_field :picture_cache %>
             </span>
           </ul>
           <div class="actions">
