--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,6 +37,9 @@
 		</header>
 		<aside class="user profile">
 			<div class="profile_content">
+
+				<%= image_tag @user.picture.url if @user.picture? %>
+
 				<h2><span><%= @user.full_name %></span></h2>
 				<p class="username">@<%= @user.happername %></p>
 				<span class="line_under_username">&nbsp;</span>
