--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
 </head>
 <body>
 	<!-- <h1>In application.html.erb</h1> -->
+	<%= form_tag(posts_path, :method => "get", class: "navbar-form", id: "search-form") do %>
+    <div class="input-append">
+      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Articles" %>
+      <!-- In order to have the "search" icon int the button, we need to use plain HTML instead 
+           of using a Rails form helper -->
+      <button class="btn" type="submit"><i class="icon-search"></i></button>
+    </div>
+  <% end %>
 
 <%= yield %>
 
