--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -186,6 +186,8 @@ nav ul li.right {
 }
 
 nav ul li.right input {
+	border-radius: 0;
+	margin: 0;
 	width: 219px;
 	height: 68px;
 	background: #FFFFFF url('icons/Arrow.svg') no-repeat 20px 28px;
