--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,22 +5,28 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
 </head>
-<body>
-	<!-- <h1>In application.html.erb</h1> -->
-	<%= form_tag(posts_path, :method => "get", class: "navbar-form", id: "search-form") do %>
-    <div class="input-append">
-      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Articles" %>
-      <!-- In order to have the "search" icon int the button, we need to use plain HTML instead 
-           of using a Rails form helper -->
-      <button class="btn" type="submit"><i class="icon-search"></i></button>
-    </div>
-  <% end %>
+<body><% if current_user != nil %>
+	<div class="homepage">
+	
+		<%= render 'layouts/header' %>
+		<%= render 'layouts/left' %>
+		<section>
+		<div class="post">
+			<%= render 'posts/new' %>
+		</div>
+		<%= yield %>
+	</section>
+		<% if @sorted_hashtags != nil %>
+		<%= render 'layouts/right' %>
+		<% end %>
+		
+</div>
+<% else %>	
+<%= yield %>	
+	<% end %>
 
-<%= yield %>
+
 
 </body>
 </html>
