--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,18 @@
-<h1>All happs</h1>
-
-<% @articles.each do |article| %>
-  <div class="article">
-    <h1 class="article-title"><%= link_to article.text, article %></h1>
-    <p class="article-content"><%= article.text %></p>
-  </div>
+<% @happs.each do |happ|%>
+	<% happ.text.gsub!(/(?:(?<=\s)|^)#(\w*[A-Za-z_]+\w*)/){ "<a class=hashtag href=posts?utf8=✓&search="+$1+">#"+$1+"</a>" }
+	%>
+	<div class="feed">
+		<span class="letters">AG</span>
+		<p class="text"><%= raw(happ.text) %> </p>
+		<span class="author"> <%= link_to(happ.user.happername, show_user_path(happ.user.id)) %>|</span><span class="date"> <%= happ.created_at %></span>
+		<ul>
+			<li><%= link_to(image_tag("icons/respond.svg")) %></li>
+			<li><%= link_to(image_tag("icons/like.svg")) %></li>
+			<% if current_user.id==happ.user.id %>
+				<li><%= link_to(image_tag("icons/trash.svg"), post_delete_path(happ.id)) %></li>
+			<% else %>
+				<li><a href="#"><%= image_tag("icons/retweet.svg")%></a></li>
+			<% end %>
+		</ul>
+	</div>
 <% end %>
