--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -50,9 +50,6 @@
 						<%= render 'shared/stats' %>
 					<% end %>
 				</ul>
-				<% if current_user != @user %>
-				<a href="" class="side_profile_follow">Follow</a>
-				<% end %>
 			</div>
 
 		</aside>
@@ -100,14 +97,15 @@
 					<% @users=@users.reject{ |u| u.id==current_user.id } %>
 					<% @users.each do |user| %>
 						<li class="wtf">
-							<%= image_tag("Photo_tweet.svg")%>
-							<p><%= user.full_name %><br/>
-								<span class="pseudo">@<%= user.happername %></span></p>
-								<%= link_to("Follow", show_user_path(user.id))%>
-						</li>
+				            <%= image_tag("Photo_tweet.svg")%>
+				            <p class="author"><%= link_to(user.full_name, show_user_path(user.id)) %><br/>
+				              <span class="pseudo">@<%= user.happername %></span>
+				            </p>
+				        </li>
 					<% end %>
 				</ul>
-				</article>
+			</article>
+		</aside>
 	</div>
 
 
