--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,24 +1,27 @@
 <div class="edit_user">
+
+<h2>Account</h2>
+<p>Change your account settings.</p>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :happername %><br />
+    <%= f.label :happername %>
     <%= f.text_field :happername, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :full_name %><br />
+    <%= f.label :full_name %>
     <%= f.text_field :full_name, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :bio %><br />
+    <%= f.label :bio %>
     <%= f.text_area :bio, autofocus: true %>
   </div>
   
@@ -27,18 +30,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.label :password %>
+    <%= f.password_field :password, autocomplete: "off", :placeholder => "Leave blank if you don't want to change it" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label :password %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Must be similar to previous field" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
+    <%= f.label :current_password %>
+    <%= f.password_field :current_password, autocomplete: "off", :placeholder => "Required to confirm your changes" %>
   </div>
 
   <div class="actions">
@@ -48,5 +51,5 @@
 
 <hr>
 <br/>
-<p>Unhappy? <%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<h2>Unhappy? <%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></h2>
 </div>
