--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,19 @@
-<% @happs = @happs.reverse %>
-<% @happs.each do |happ|%>
-	<% happ.text.gsub!(/(?:(?<=\s)|^)#(\w*[A-Za-z_]+\w*)/){ "<a class=hashtag href=posts?utf8=✓&search="+$1+">#"+$1+"</a>" }
-	%>
-	<div class="feed">
-		<span class="letters"><%= happ.user.happername.chars.first %></span>
-		<p class="text"><%= raw(happ.text) %> </p>
-		<span class="author"> <%= link_to(happ.user.happername, show_user_path(happ.user.id)) %>|</span><span class="date"> <%= happ.created_at %></span>
-		<ul>
-			<% if current_user.id==happ.user.id %>
-				<li><%= link_to(image_tag("icons/trash.svg"), post_delete_path(happ.id)) %></li>
-			<% end %>
-		</ul>
-	</div>
+<% if @happ.nil? %>
+	<h2 class="research_not_found"> No happ has been found.</h2>
+	<% else %>
+	<% @happs = @happs.reverse %>
+	<% @happs.each do |happ|%>
+		<% happ.text.gsub!(/(?:(?<=\s)|^)#(\w*[A-Za-z_]+\w*)/){ "<a class=hashtag href=posts?utf8=✓&search="+$1+">#"+$1+"</a>" }
+		%>
+		<div class="feed">
+			<span class="letters"><%= happ.user.happername.chars.first %></span>
+			<p class="text"><%= raw(happ.text) %> </p>
+			<span class="author"> <%= link_to(happ.user.happername, show_user_path(happ.user.id)) %>|</span><span class="date"> <%= happ.created_at %></span>
+			<ul>
+				<% if current_user.id==happ.user.id %>
+					<li><%= link_to(image_tag("icons/trash.svg"), post_delete_path(happ.id)) %></li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
 <% end %>
