--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,55 +1,86 @@
-<div class="edit_user">
+<div class="homepage">
+  <header>
+    <nav class="top">
+      <ul class="nav">
+        <li><%= link_to(image_tag("icons/House.svg"), root_path) %></li>
+        <li><%= link_to(image_tag("icons/user.svg"), show_user_path(current_user.id)) %></li>
+        <li><%= link_to(image_tag("icons/Settings.svg"), edit_user_registration_path) %></li>
+        <li><%= link_to(image_tag("icons/Logout.svg"), destroy_user_session_path) %></li>
+      </ul>
+      <ul>
+        <li class="right"><a href="#"><%= image_tag("icons/Icon_pen.svg")%></a></li>
+        <li class="right input"><input type="text" placeholder="search"></li>
+      </ul>
+    </nav>
+    <%= link_to(root_path) do %><div class="top"></div><% end %>
+  </header>
+  <aside class="user profile">
+    <div class="profile_content">
+      <%= image_tag("picture.png")%>
+      <h2><span><%= @user.full_name %></span></h2>
+      <p class="username">@<%= @user.happername %></p>
+      <span class="line_under_username">&nbsp;</span>
+      <p class="description">Digital designer | Creative Artworker<br/>Je fais aussi du freelance, et j’ai un site internet :<br/><span class="bolder">www.arthurguillerminhazan.fr</span></p>
+      <ul>
+        <% if user_signed_in? %>
+          <% if @user ||= current_user %>
+            <%= render 'shared/stats' %>
+          <% end %>
+        <% end %>
+      </ul>
+      <%= render 'follow_form' if user_signed_in? && @user.id != current_user.id %>
+    </div>
+    <ul class="gallery">
+      <li><%= image_tag("Photo_01.png")%></li>
+      <li><%= image_tag("Photo_01.png")%></li>
+      <li><%= image_tag("Photo_01.png")%></li>
+      <li><%= image_tag("Photo_01.png")%></li>
+      <li><%= image_tag("Photo_01.png")%></li>
+      <li><%= image_tag("Photo_01.png")%></li>
+      <li><%= image_tag("Photo_01.png")%></li>
+      <li><%= image_tag("Photo_01.png")%></li>
+      <li><%= image_tag("Photo_01.png")%></li>
+    </ul>
+  </aside>
 
-<h2>Account</h2>
-<p>Change your account settings.</p>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+  <section>
+    <div class="feed edit_user">
+      <h2>Change your account</h2>
 
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :happername %>
-    <%= f.text_field :happername, autofocus: true %>
-  </div>
+          <%= f.label :email, :id => 'first' %>
+          <%= f.email_field :email, autofocus: true %><br/>
 
-  <div class="field">
-    <%= f.label :full_name %>
-    <%= f.text_field :full_name, autofocus: true %>
-  </div>
+          <%= f.label :full_name, :id => 'second' %>
+          <%= f.text_field :full_name, autofocus: true, :placeholder => 'COUCOU'%><br/>
+        
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+          
+          <%= f.label :current_password, :id => 'third' %>
+          <%= f.password_field :current_password, autocomplete: "off" %><br/>
 
-  <div class="field">
-    <%= f.label :bio %>
-    <%= f.text_area :bio, autofocus: true %>
-  </div>
-  
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+          <%= f.label :password %><i id="fourth"> (new)</i>
+          <%= f.password_field :password, autocomplete: "off" %><br/>
 
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password, autocomplete: "off", :placeholder => "Leave blank if you don't want to change it" %>
-  </div>
+          <%= f.label :password_confirmation, :id => 'fifth' %>
+          <%= f.password_field :password_confirmation, autocomplete: "off" %><br/>
 
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Must be similar to previous field" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :current_password %>
-    <%= f.password_field :current_password, autocomplete: "off", :placeholder => "Required to confirm your changes" %>
-  </div>
+        <div class="actions">
+          <%= f.submit "Update" %>
+        </div>
+      <% end %>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<hr>
-<br/>
-<h2>Unhappy? <%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></h2>
+      <%= link_to "Back", :back %>
+    </div>
+  </section>
 </div>
+
+
+
