--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,9 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400);
 @import url(http://fonts.googleapis.com/css?family=Raleway:800);
 
-
+html, body{
+	height: 100%;
+}
 div.container {
 	background: url("Background.png") center fixed;
 	-webkit-background-size: cover;
@@ -31,7 +33,6 @@ div.container {
 
 a {
 	text-decoration: none;
-	color: white;
 }
 
 div.top {
@@ -52,7 +53,7 @@ div.container h1 {
 
 div.container section {
 	width: 325px;
-	margin: 200px auto;
+	margin: 20px auto;
 	text-align : center;
 }
 
@@ -99,13 +100,11 @@ div.container  section ul li a, div.container section div.actions a {
 }
 
 div.container  section ul li.buttons a.log{
-	margin-right: 17px;
 	border: 1px solid #FFFFFF;
 }
 
 div.container section div.actions a.log{
 	border: 1px solid #FFFFFF;
-
 }
 
 
@@ -125,8 +124,7 @@ div.container  section ul li.buttons a#sign:hover, div.container section div.act
 }
 
 div.container footer {
-  /*position: absolute;*/
-	left: 0;
+  	position: absolute;
 	bottom: 0;
 	height: 30px;
 	width: 100%;
@@ -138,6 +136,10 @@ div.container footer {
 	color: #FFFFFF;
 	line-height: 17px;
 	text-shadow: 0px 1px 2px rgba(0,0,0,0.50);
+}
+
+div.container footer a {
+	color: #FFFFFF;
 }
 
 div.container footer span {
@@ -186,6 +188,8 @@ nav ul li.right {
 }
 
 nav ul li.right input {
+	border-radius: 0;
+	margin: 0;
 	width: 219px;
 	height: 68px;
 	background: #FFFFFF url('icons/Arrow.svg') no-repeat 20px 28px;
@@ -312,14 +316,77 @@ div.homepage section div.post p {
 	padding-top: 38px;
 }
 
-div.homepage section div.feed {
+div.homepage section div.post textarea{
+		border: none;
+		outline: none;
+		resize: none;
+		width: 78%;
+		font-size: 12px;
+		font-family: 'Open Sans';
+	}
+
+div.homepage section div.post input[disabled=disabled]{
+	color: #000;
+	background:#dddddd;
+}
+
+div.homepage section div.feed, div.user {
 	background: #FFFFFF;
 	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.15);
 	height: 100%;
 	padding: 69px 30px;
 }
 
-div.homepage section div.feed span.letters {
+div.homepage section div.feed span.author a{
+		color: #9B9B9B; 
+	}
+div.homepage section div.feed span.author a:hover{
+		color:#EC4746;
+	}
+
+div.users_list .user {
+	padding: 33px !important;
+}
+.users_list h2 {
+	font-family: 'Open Sans';
+	margin-bottom: 30px;
+	color:	#B4BBC2; 
+}
+
+.users_list {
+	width: 100%;
+}
+.users_list .author a{
+	color: #545454
+}
+.users_list .username {
+	font-family: 'Open Sans';
+	color: #9B9B9B;
+}
+.users_list p.description{
+	color: #8D8D8D;
+	font-family: 'Open Sans';
+	font-weight: 300;
+	margin-top: 8px;
+	display: block;
+}
+.users_list .unfollow {
+	/* Rectangle 272: */
+	background-image: linear-gradient(0deg, #D23F36 0%, #F04848 100%);
+	border-radius: 3px;
+	padding: 10px 20px;
+	width: 88px;
+	display: inline-block;
+	float: right;
+	text-align: center;
+	margin-top: -30px;
+}
+.users_list .unfollow a {
+	color: #fff;
+	font-family: 'Open Sans';
+	font-weight: 300;
+}
+section div.feed span.letters {
 	font-family: 'Raleway';
 	color: #fff;
 	padding: 20px;
@@ -342,14 +409,13 @@ div.homepage section div.feed p.text,div.homepage section div.feed span.author, 
 	margin-bottom: 15px;
 }
 
-div.homepage section div.feed span.hashtag {
-	color: #EC4746;
-	font-weight: 600;
-}
+div.homepage section div.feed a.hashtag{
+			color:#EC4746;
+			font-weight :600;
+		}
 
 div.homepage section div.feed span.author, div.homepage section div.feed span.date {
 	font-weight: 600;
-	padding-top: 30px;
 }
 
 div.homepage section div.feed ul {
@@ -359,6 +425,82 @@ div.homepage section div.feed ul {
 div.homepage section div.feed ul li {
 	float: left;
 	padding-right: 30px;
+}
+
+div.homepage div.edit_user {
+	font-family: "Open Sans";
+	font-weight: 300;
+	color:#999999;
+	padding-left: 5%;
+}
+
+div.homepage div.edit_user h2 {
+	font-size: 18px;
+}
+
+div.homepage div.edit_user h2 + p {
+	margin-bottom: 30px;
+}
+
+div.homepage div.edit_user label {
+	font-size: 14px;
+	color: #B4BBC2;
+	width: 20%;
+	float: left;
+	line-height: 44px;
+}
+
+div.homepage div.edit_user div.field {
+	width: 100%;
+}
+
+
+div.homepage div.edit_user input, div.homepage div.edit_user textarea{
+	margin : 10px 0 15px 0;
+	color: #B4BBC2;
+}
+
+div.homepage div.edit_user input[type=submit]{
+	margin : 10px 0 15px 0;
+	color: white;
+	border-radius: 1px;
+}
+
+div.homepage div.edit_user input[type=text],div.homepage div.edit_user input[type=password],div.homepage div.edit_user input[type=email]{
+	background: white;
+	border : 1px solid #B4BBC2;
+	border-radius: 0;
+	height: 27px;
+	width: 300px;
+	font-weight: 300;
+	text-align: left;
+	padding-left: 10px;
+	text-transform: none;
+	letter-spacing: normal;
+	color: #000000;
+}
+
+div.homepage div.edit_user textarea{
+	border : 1px solid #B4BBC2;
+	outline: none;
+	font-family: "Open Sans";
+	font-size: 12px;
+	font-weight: 300;
+	resize: none;
+	margin-top: 10px;
+	width : 300px;
+	height:60px;
+	color: #000000;
+}
+
+div.homepage div.edit_user hr{
+	float: left;
+}
+
+div.homepage div.edit_user i{
+	font-style: italic;
+	font-size: 10px;
+	color: #cccccc;
 }
 
 aside.right_side {
@@ -380,15 +522,6 @@ aside.right_side h3 {
 	margin-bottom: 20px;
 }
 
-aside.right_side li.trending {
-	font-family: 'Open Sans';
-	font-size: 12px;
-	color: #EC4746;
-	line-height: 17px;
-	font-weight: 300;
-	margin-bottom: 5px;
-}
-
 aside.right_side ul li.wtf {
 	display: block;
 	height: 40px;
@@ -408,12 +541,9 @@ aside.right_side ul li p {
 	float: left;
 }
 
-aside.right_side ul li span.pseudo {
-	color: #B9B9B9;
-}
-
-aside.right_side ul li a {
-		/*float : right;*/
+aside.right_side article.recommandations ul li input{
+	position: absolute;
+	right: 22px;
 	font-family: 'Open Sans';
 	font-size: 11px;
 	color: #EC4746;
@@ -424,16 +554,56 @@ aside.right_side ul li a {
 	padding: 5px 10px 5px 23px;
 	border: 1px solid #EC4746;
 	border-radius: 3px;
-	background: #FFFFFF url('icons/icon_add.svg') no-repeat 5px 6px;
-	position: absolute;
-	margin-top: 4px;
-	right: 22px;
+	background :#FFFFFF url('icons/icon_add.svg') no-repeat 5px 6px;
+	position:absolute;
+	margin-top : 4px;
+	margin-left : 35px;
+	box-shadow: none;
+	}
+
+	aside.right_side article.recommandations ul li input:hover{
+		background : rgba(236, 71, 70, 0.5) url('icons/icon_add.svg') no-repeat 5px 6px;
+		cursor :pointer;
+}
+		
+aside.right_side article.recommandations ul li span.pseudo a{
+	color: #aaaaaa;
 }
 
-aside.right_side ul li a:hover {
-	background: rgba(236, 71, 70, 0.5) url('icons/icon_add.svg') no-repeat 5px 6px;
-	cursor: pointer;
+aside.right_side article.recommandations ul li span.pseudo a:hover{
+	cursor :pointer;
+	color: #EC4746;
 }
+
+aside.right_side li.trending {
+	font-family: 'Open Sans';
+	font-size: 12px;
+	color: #EC4746;
+	line-height: 17px;
+	font-weight: 300;
+	margin-bottom: 5px;
+}
+
+aside.right_side article.trendings ul li{
+	color:#B9B9B9;
+	
+}
+
+aside.right_side article.trendings ul li a{
+	color:#EC4746;
+	font-weight: 600
+	
+}
+
+div.homepage section h2.research_not_found{
+	font-family: "Open Sans";
+	font-size: 18px;
+	font-weight: 400;
+	color: #aaaaaa;
+}
+
+
+
 
 /** PROFILE **/
 aside.user.profile {
@@ -682,109 +852,4 @@ form input[type="submit"]:before {
 div.container div.actions {
 	margin-top: 30px;
 	margin-left: 4px;
-}
-
-/****** EDIT USER ******/
-div.feed.edit_user h2{
-	font-family : 'Open Sans';
-	font-size : 16px;
-}
-
-	div.feed.edit_user label, div.feed.edit_user i, div.feed.edit_user p{
-	font-family : 'Open Sans';
-	font-size : 12px;
-}
-
-	div.feed.edit_user p{
-		margin : 20px 0;
-	}
-
-div.container form {
-	text-align: center;
-}
-
-
-div.feed.edit_user form input[type="email"] {
-	margin-top: 10px;
-}
-
-div.feed.edit_user form input[type="email"], div.feed.edit_user form input[type="password"], div.feed.edit_user form input[type="mail"], div.feed.edit_user form input[type="text"] {
-	width: 200px;
-	height: 40px;
-	background: #F4F4F4;
-	border: 0.5px solid #DEDEDE;
-	text-align: center;
-	margin-top: 22px;
-	font-family: 'Open Sans', arial, sans-serif !important;
-	font-weight: 700;
-	text-transform: uppercase;
-	font-size: 12px;
-	color: #CFCFCF;
-	letter-spacing: 1px;
-	border-radius : 0;
-}
-
-div.feed.edit_user form input[type="button"] {
-	color: #FFF;
-	font-family: 'Open Sans', arial, sans-serif !important;
-	font-size: 12px;
-	font-weight: 300;
-	line-height: 17px;
-	background: rgba(0,0,0,0.15);
-	border: 1px solid #FFFFFF;
-	padding-bottom: 7px;
-	padding-top: 9px;
-	padding-left: 21px;
-	padding-right: 17px;
-	border-radius : 0;
-}
-
-div.feed.edit_user form input[type="submit"] {
-	color: #FFF;
-	font-family: 'Open Sans', arial, sans-serif !important;
-	font-size: 12px;
-	font-weight: 300;
-	line-height: 17px;
-	background-image: linear-gradient(-180deg, #EF4847 0%, #9E2720 100%);
-	box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.30);
-	padding-bottom: 7px;
-	padding-top: 9px;
-	padding-left: 25px;
-	padding-right: 25px;
-	border: none;
-	display: inline;
-	border-radius : 0;
-}
-
-div.feed.edit_user form input:focus {
-	outline: 0;
-}
-
-div.feed.edit_user input:focus::-webkit-input-placeholder {
-	color: transparent;
-}
-
-	div.feed.edit_user form label#first{
-		margin-right : 110px;
-	}
-
-	div.feed.edit_user form label#second{
-		margin-right : 87px;
-	}
-
-	div.feed.edit_user form label#third{
-		margin-right : 41px;
-	}
-
-	div.feed.edit_user form i#fourth{
-		margin-right : 55px;
-	}
-
-	div.feed.edit_user form label#fifth{
-		margin-right : 13px;
-	}
-
-div.feed.edit_user div.actions{
-	margin-top : 30px;
-
 }
