search form fix

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<% if @happ.nil? %>
+<% if @happs.nil? %>
 	<h2 class="research_not_found"> No happ has been found.</h2>
 	<% else %>
 	<% @happs = @happs.reverse %>
