--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -522,7 +522,7 @@ aside.right_side h3 {
 	margin-bottom: 20px;
 }
 
-aside.right_side ul li.wtf {
+aside.right_side ul li.suggest {
 	display: block;
 	height: 40px;
 	margin-bottom: 15px;
