--- a/app/views/home/index.html.erb.BACKUP.2057.erb
+++ b/app/views/home/index.html.erb.BACKUP.2057.erb
@@ -89,7 +89,7 @@
 				<h3>Who to follow ?</h3>
 				<ul>
 					<% @users.each do |user| %>
-						<li class="wtf">
+						<li class="suggest">
 							<%= image_tag("Photo_tweet.svg")%>
 							<p><%= user.full_name %><br/>
 								<span class="pseudo">@<%= user.happername %></span></p>
