--- a/app/views/layouts/_right.html.erb
+++ b/app/views/layouts/_right.html.erb
@@ -16,7 +16,7 @@
 				<ul>
 					<% @users=@users.reject{ |u| u.id==current_user.id } %>
 					<% @users.each do |user| %>
-						<li class="wtf">
+						<li class="suggest">
 							<%= image_tag("Photo_tweet.svg")%>
 							<p><%= user.full_name %><br/>
 								<span class="pseudo"><%= link_to("@"+user.happername, show_user_path(user.id))%></span></p>
