fix search in user show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <% @posts = @posts.reverse %>
 <% @posts.each do |happ|%>
-	<% happ.text.gsub!(/(?:(?<=\s)|^)#(\w*[A-Za-z_]+\w*)/){ "<a class=hashtag href=posts?utf8=✓&search="+$1+">#"+$1+"</a>" }
+	<% happ.text.gsub!(/(?:(?<=\s)|^)#(\w*[A-Za-z_]+\w*)/){ "<a class=hashtag href=../../posts?utf8=✓&search="+$1+">#"+$1+"</a>" }
 	%>
 	<div class="feed">
 		<span class="letters"><%= happ.user.happername.chars.first %></span>
